--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -7,6 +7,7 @@
 #include <nordic/nrf52840_qiaa.dtsi>
 #include "nice_nano-pinctrl.dtsi"
 #include "arduino_pro_micro_pins.dtsi"
+#include <dts/rgb_fx.dtsi>
 
 / {
     model = "nice!nano";
