--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -5,7 +5,7 @@
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
-#include <dts/rgb_fx.dtsi>
+#include <rgb_fx.dtsi>
 #include <dt-bindings/zmk/rgb_fx.h>
 
 #include <layouts/foostan/corne/5column.dtsi>
