--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -105,7 +105,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             >;
         };
 
-        main_animations: anumation_0 {
+        main_animations: animation_0 {
             compatible = "zmk,rgb-fx-control-group";
             status = "okay";
             
@@ -114,10 +114,9 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             >; 
         };
 
-        heatmap_effect: anumation_1{
+        heatmap_effect: animation_1{
             compatible = "zmk,rgb-fx-heatmap";
             status = "okay";
-            brightness-steps = <5>;
             pixels = <0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
                       21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41>;
             color-cold-hue = <240>;  // Blue for unused keys
