--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -24,7 +24,7 @@
         zephyr,display = &oled;
         zmk,kscan = &kscan0;
         zmk,physical-layout = &foostan_corne_6col_layout;
-		zmk,rgb-fx = &rgb_fx;
+		zmk,rgb-fx = &rgb_fx_root;
     };
 
     default_transform: keymap_transform_0 {
@@ -72,7 +72,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             ;
 
     };
-    rgb_fx {
+    rgb_fx_root: rgb_fx {
         compatible = "zmk,rgb-fx";
         drivers = <&led_strip>;
         chain-lengths = <54>;  // Or 27 if mirrored
