--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -6,7 +6,7 @@
 
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <rgb_fx.dtsi>
-#include <dt-bindings/zmk/rgb_fx.h>
+#include <dt-bindings/zmk/rgb-fx.h>
 
 #include <layouts/foostan/corne/5column.dtsi>
 #include <layouts/foostan/corne/6column.dtsi>
@@ -72,7 +72,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             ;
 
     };
-    rgb_fx_root: rgb_fx {
+	rgb_fx {
         compatible = "zmk,rgb-fx";
         drivers = <&led_strip>;
         chain-lengths = <54>;  // Or 27 if mirrored
