--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -72,7 +72,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             ;
 
     };
-	rgb_fx {
+	rgb-fx {
         compatible = "zmk,rgb-fx";
         drivers = <&led_strip>;
         chain-lengths = <54>;  // Or 27 if mirrored
