--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -85,7 +85,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
         21 22 23 24 25 26  //Right top row
         27 28 29 30 31 32  //Right middle
         33 34 35 36 37 38  //Right bottom
-        39 40 41           //Right thumbs
+        39 40 41 42 43 44 45 46 47 48 49 50 51 52 53        //Right thumbs
 		>;
         pixels 
             = <&pixel 0 0>
@@ -130,6 +130,18 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             , <&pixel 0 39>
             , <&pixel 0 40>
             , <&pixel 0 41>
+            , <&pixel 0 42>
+            , <&pixel 0 43>
+            , <&pixel 0 44>
+            , <&pixel 0 45>
+            , <&pixel 0 46>
+            , <&pixel 0 47>
+            , <&pixel 0 48>
+            , <&pixel 0 49>
+            , <&pixel 0 50>
+            , <&pixel 0 51>
+            , <&pixel 0 52>
+            , <&pixel 0 53>
             ;  // ... continue for all LEDs
 
         root_animation: animation_100 {
