--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -71,15 +71,20 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
             , <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
 
-	led_strip: ws2812 {
-	    compatible = "worldsemi,ws2812-spi";
-	    chain-length = <54>;
-	    spi-dev = <&spi3>;
-	    spi-max-frequency = <4000000>;
-	    spi-one-frame = <0x70>;
-	    spi-zero-frame = <0x40>;
-	    color-mapping = <LED_COLOR_ID_GREEN LED_COLOR_ID_RED LED_COLOR_ID_BLUE>;
-	};
+	&spi3 {
+    	//compatible = "nordic,nrf-spim";
+    	//status = "okay";
+    
+    	led_strip: ws2812@0 {
+	        compatible = "worldsemi,ws2812-spi";
+	        reg = <0>;
+	        spi-max-frequency = <4000000>;
+	        chain-length = <54>;
+	        spi-one-frame = <0x70>;
+	        spi-zero-frame = <0x40>;
+	        color-mapping = <LED_COLOR_ID_GREEN LED_COLOR_ID_RED LED_COLOR_ID_BLUE>;
+    };
+};
 
 	rgb_fx_root:rgb-fx {
         compatible = "zmk,rgb-fx";
