--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -22,8 +22,8 @@
 
 
 &spi3 {
-	//compatible = "nordic,nrf-spim";
-	//status = "okay";
+	compatible = "nordic,nrf-spim";
+	status = "okay";
 	
 	led_strip: ws2812@0 {
 		compatible = "worldsemi,ws2812-spi";
