--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -34,7 +34,7 @@
         chain-length = <54>;  // Total LEDs; <27> per half if separate
         num-chains = <1>;     // Single chain
         // Data pin: Adjust to your wiring (e.g., P0.06 = pin 6 on gpio0)
-        data-gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;  // Example: D6/P0.06 on nice!nano; change as needed
+        in-gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;  // Example: D6/P0.06 on nice!nano; change as needed
         label = "WS2812_LED_STRIP";
         // GRB order (common for WS2812)
         color-mapping = <1 0 2>;  // Green=1, Red=0, Blue=2
