--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -29,7 +29,7 @@
     };
 
     // Zephyr WS2812 GPIO LED Strip (bit-bang - single data pin)
-    ws2812_led_strip: ws2812@0 {
+    ws2812_led_strip: ws2812 {
         compatible = "worldsemi,ws2812-gpio";  // Matches CONFIG_WS2812_GPIO
         chain-length = <54>;  // Total LEDs; <27> per half if separate
         // Data pin: Adjust to your wiring (e.g., P0.06 = pin 6 on gpio0)
