--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -29,11 +29,12 @@
     };
 
     // Zephyr WS2812 GPIO LED Strip (bit-bang - single data pin)
-    ws2812_led_strip: ws2812 {
-        compatible = "worldsemi,ws2812";  // Matches CONFIG_WS2812_GPIO
+    rgb_underglow: rgb_underglow {
+        compatible = "zmk,rgb_underglow"; 
+        status = "okay";
         chain-length = <54>;  // Total LEDs; <27> per half if separate
         // Data pin: Adjust to your wiring (e.g., P0.06 = pin 6 on gpio0)
-        in-gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;  // Example: D6/P0.06 on nice!nano; change as needed
+        data-gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;  // Example: D6/P0.06 on nice!nano; change as needed
         // GRB order (common for WS2812)
         color-mapping = <1 0 2>;  // Green=1, Red=0, Blue=2
     };
