--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -8,6 +8,7 @@
 #include <rgb_fx.dtsi>
 #include <dt-bindings/zmk/rgb_fx.h>
 #include <dt-bindings/led/led.h>
+#include <drivers/rgb_fx.h>
 
 #include <layouts/foostan/corne/5column.dtsi>
 #include <layouts/foostan/corne/6column.dtsi>
