--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -7,8 +7,8 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <rgb_fx.dtsi>
 #include <dt-bindings/zmk/rgb_fx.h>
-//#include <dt-bindings/led/led.h>
-#include <drivers/rgb_fx.h>
+#include <dt-bindings/led/led.h>
+//#include <drivers/rgb_fx.h>
 
 #include <layouts/foostan/corne/5column.dtsi>
 #include <layouts/foostan/corne/6column.dtsi>
