--- a/app/boards/shields/corne/corne.dtsi
+++ b/app/boards/shields/corne/corne.dtsi
@@ -5,10 +5,6 @@
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
-#include <rgb_fx.dtsi>
-#include <dt-bindings/zmk/rgb_fx.h>
-#include <dt-bindings/led/led.h>
-//#include <drivers/rgb_fx.h>
 
 #include <layouts/foostan/corne/5column.dtsi>
 #include <layouts/foostan/corne/6column.dtsi>
@@ -26,34 +22,21 @@
         zephyr,display = &oled;
         zmk,kscan = &kscan0;
         zmk,physical-layout = &foostan_corne_6col_layout;
-        //zmk,rgb-fx = &rgb_fx_root;
-    };
-
-    // Zephyr WS2812 GPIO LED Strip (bit-bang - single data pin)
-    rgb_underglow: rgb_underglow {
-        compatible = "zmk,rgb_underglow"; 
-        status = "okay";
-        chain-length = <54>;  // Total LEDs; <27> per half if separate
-        // Data pin: Adjust to your wiring (e.g., P0.06 = pin 6 on gpio0)
-        data-gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;  // Example: D6/P0.06 on nice!nano; change as needed
-        // GRB order (common for WS2812)
-        color-mapping = <1 0 2>;  // Green=1, Red=0, Blue=2
     };
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <12>;
         rows = <4>;
-        // | SW1  | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  | SW1  |
-        // | SW7  | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  | SW7  |
-        // | SW13 | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 | SW13 |
-        //                      | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
-
+// | SW1  | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  | SW1  |
+// | SW7  | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  | SW7  |
+// | SW13 | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 | SW13 |
+//                      | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
         map = <
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-                            RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
+RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
+RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
+RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
+                        RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
         >;
     };
 
@@ -61,16 +44,15 @@
         compatible = "zmk,matrix-transform";
         columns = <10>;
         rows = <4>;
-        // | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  |
-        // | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  |
-        // | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 |
-        //               | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
-
+// | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  |
+// | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  |
+// | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 |
+//               | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
         map = <
-            RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10)
-            RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10)
-            RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10)
-                            RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
+RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10)
+RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10)
+RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10)
+                        RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
         >;
     };
 
@@ -79,175 +61,19 @@
         wakeup-source;
 
         diode-direction = "col2row";
-        row-gpios = <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
-    };
-
-    rgb-fx {
-        compatible = "zmk,rgb-fx";
-        drivers = <&rgb_underglow>;  // Reference the Zephyr WS2812 device
-        chain-lengths = <54>;  // Matches ws2812 chain-length
-
-        key-pixels = <>;  // Empty for full-chain mapping
-
-        // Full 54-pixel mapping (0-5 left top row, etc.)
-        pixels = <&pixel 0 0>,
-                 <&pixel 0 1>,
-                 <&pixel 0 2>,
-                 <&pixel 0 3>,
-                 <&pixel 0 4>,
-                 <&pixel 0 5>,
-                 <&pixel 0 6>,
-                 <&pixel 0 7>,
-                 <&pixel 0 8>,
-                 <&pixel 0 9>,
-                 <&pixel 0 10>,
-                 <&pixel 0 11>,
-                 <&pixel 0 12>,
-                 <&pixel 0 13>,
-                 <&pixel 0 14>,
-                 <&pixel 0 15>,
-                 <&pixel 0 16>,
-                 <&pixel 0 17>,
-                 <&pixel 0 18>,
-                 <&pixel 0 19>,
-                 <&pixel 0 20>,
-                 <&pixel 0 21>,
-                 <&pixel 0 22>,
-                 <&pixel 0 23>,
-                 <&pixel 0 24>,
-                 <&pixel 0 25>,
-                 <&pixel 0 26>,
-                 <&pixel 0 27>,
-                 <&pixel 0 28>,
-                 <&pixel 0 29>,
-                 <&pixel 0 30>,
-                 <&pixel 0 31>,
-                 <&pixel 0 32>,
-                 <&pixel 0 33>,
-                 <&pixel 0 34>,
-                 <&pixel 0 35>,
-                 <&pixel 0 36>,
-                 <&pixel 0 37>,
-                 <&pixel 0 38>,
-                 <&pixel 0 39>,
-                 <&pixel 0 40>,
-                 <&pixel 0 41>,
-                 <&pixel 0 42>,
-                 <&pixel 0 43>,
-                 <&pixel 0 44>,
-                 <&pixel 0 45>,
-                 <&pixel 0 46>,
-                 <&pixel 0 47>,
-                 <&pixel 0 48>,
-                 <&pixel 0 49>,
-                 <&pixel 0 50>,
-                 <&pixel 0 51>,
-                 <&pixel 0 52>,
-                 <&pixel 0 53>;
-
-        root_animation: animation_100 {
-            compatible = "zmk,rgb-fx-compose";
-            status = "okay";
-            fx = <&main_animations>;
-        };
-
-
-        main_animations: animation_0 {
-            compatible = "zmk,rgb-fx-control-group";
-            status = "okay";
-
-            fx = <
-                &blue_solid
-                &red_solid
-                &white_solid
-                &heatmap_effect
-            >;
-
-        };
-
-
-        blue_solid: animation_1 {
-            compatible = "zmk,rgb-fx-solid";
-            status = "okay";
-
-            pixels = <0 1 2 3 4 5
-                      6 7 8 9 10 11
-                      12 13 14 15 16 17
-                      18 19 20
-                      21 22 23 24 25 26
-                      27 28 29 30 31 32
-                      33 34 35 36 37 38
-                      39 40 41 42 43 44 45 46 47 48 49 50 51 52 53>;
-            colors = <HSL(187, 100, 59)>;
-
-        };
-
-
-        red_solid: animation_2 {
-            compatible = "zmk,rgb-fx-solid";
-            status = "okay";
-
-           pixels = <0 1 2 3 4 5
-                      6 7 8 9 10 11
-                      12 13 14 15 16 17
-                      18 19 20
-                      21 22 23 24 25 26
-                      27 28 29 30 31 32
-                      33 34 35 36 37 38
-                      39 40 41 42 43 44 45 46 47 48 49 50 51 52 53>;
-            colors = <HSL(354, 100, 59)>;
-
-        };
-
-
-        white_solid: animation_3 {
-            compatible = "zmk,rgb-fx-solid";
-            status = "okay";
-
-
-            pixels = <0 1 2 3 4 5
-                      6 7 8 9 10 11
-                      12 13 14 15 16 17
-                      18 19 20
-                      21 22 23 24 25 26
-                      27 28 29 30 31 32
-                      33 34 35 36 37 38
-                      39 40 41 42 43 44 45 46 47 48 49 50 51 52 53>;
-            colors = <HSL(0, 0, 100)>;
-
-        };
-
-
-        heatmap_effect: animation_4 {
-            compatible = "zmk,rgb-fx-heatmap";
-            status = "okay";
-
-            pixels = <0 1 2 3 4 5
-                      6 7 8 9 10 11
-                      12 13 14 15 16 17
-                      18 19 20
-                      21 22 23 24 25 26
-                      27 28 29 30 31 32
-                      33 34 35 36 37 38
-                      39 40 41 42 43 44 45 46 47 48 49 50 51 52 53>;
-            color-cold-hue = <240>;  // Blue for unused
-            color-hot-hue = <0>;     // Red for used
-            saturation = <100>;
-            lightness = <50>;
-            blending-mode = "normal";
-
-        };
+        row-gpios
+            = <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            ;
 
     };
 
+    // TODO: per-key RGB node(s)?
 };
 
-
 &pro_micro_i2c {
-
     status = "okay";
 
     oled: ssd1306@3c {
@@ -264,7 +90,5 @@
         com-sequential;
         inversion-on;
         prechargep = <0x22>;
-
     };
-
 };
